UI fixes and updates. Purchase button now uses custom styling, responsive Movie Details page on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,11 +28,11 @@ body a:hover{
 	text-decoration:none;
 }
 input[type="submit"],.agileinfo_chat a,.w3ls_footer_grid1_left p a,.w3l_sign_in_register ul li a,.w3ls_footer_grid1_right ul li a,.w3_customer_email_right a,ul.dropdown-menu.multi-column ul li a{
-	transition:.5s ease-in;
-	-webkit-transition:.5s ease-in;
-	-moz-transition:.5s ease-in;
-	-o-transition:.5s ease-in;
-	-ms-transition:.5s ease-in;
+	transition:.2s ease-in;
+	-webkit-transition:.2s ease-in;
+	-moz-transition:.2s ease-in;
+	-o-transition:.2s ease-in;
+	-ms-transition:.2s ease-in;
 }
 /*-- header --*/
 .header {
@@ -880,20 +880,20 @@ h2.typoh2{
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-size: 13px;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-    -moz-transition: 0.5s all;
+    transition: 0.2s all;
+    -webkit-transition: 0.2s all;
+    -o-transition: 0.2s all;
+    -ms-transition: 0.2s all;
+    -moz-transition: 0.2s all;
     cursor: pointer;
 } 
 .icon-box:hover {
     background: #000;
-	transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-	-moz-transition:0.5s all;
+	transition:0.2s all;
+	-webkit-transition:0.2s all;
+	-o-transition:0.2s all;
+	-ms-transition:0.2s all;
+	-moz-transition:0.2s all;
 }
 .icon-box:hover i.fa {
 	color:#fff !important;
